feat: - reorganização das pastas do projeto - mudanças no .gitignore: agora ele ignora o .nupkg - mudanças no cliparser.csproj: para que o projeto atenda a um padrão mínimo de biblioteca - mudanças no README: Informa que a lib tem como foco o uso pessoal, apenas

--- a/cli-parser.csproj
+++ b/cli-parser.csproj
@@ -1,7 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <PackageId>CliParser</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>andersonrrss</Authors>
+    <Description>Bilioteca pessoal pra parse de CLI</Description>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <RepositoryUrl>https://github.com/andersonrrss/cli-parser</RepositoryUrl>
+    <OutputType>Library</OutputType>
     <TargetFramework>net10.0</TargetFramework>
     <RootNamespace>cli_parser</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
